Fix header content spacing and alignment
This commit fix numerous css properties in the header to further meet
the design specifications. The height for the content and image are
removed. Furthermore, the width of the header container is made smaller.

--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ body {
 
 
 .header .container {
-    width: 1300px;
+    width: 1100px;
 }
 
-.hero .content, .hero .image {
-    height: 250px;
+.hero {
+    padding: 70px 0 120px;
 }
 
 .footer {
@@ -49,6 +49,12 @@ body {
 
 .hero{
     display: flex;
+    justify-content: space-between;
+}
+
+.hero .content {
+    width: 487.25px;
+    box-sizing: content-box;
 }
 
 .hero .text{
@@ -75,7 +81,7 @@ button{
 }
 
 .platter {
-    height: 400px;
+    height: 300px;
     width: auto;
 }
 
